# DoublePendulumMPC

./: ActuationModelDoublePendulum.cpp  ActuationModelDoublePendulum.h  CMakeLists.txt  Controller.cpp  Controller.h  CostModelDoublePendulum.cpp  CostModelDoublePendulum.h  main.cpp
double_pendulum_description/urdf/: double_pendulum.urdf  double_pendulum_good.urdf  double_pendulum_original.urdf
